kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: storyingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: story.stijnbaltessen.digital
    http:
      paths:
        - backend:
            serviceName: story-service
            servicePort: 80
